--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <a href="_blank"><img class="one" src="twitter.png" alt="twitter logo"/></a>
 
-    <a href="_blank"
+    <a href="https://www.instagram.com/chintusandeepchintu/"
       ><img class="two" src="instagram.gif" alt="instagram logo"
     /></a>
 
