--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- <div>-->
 
-    <a href="_blank"><img class="one" src="twitter.png" alt="twitter logo"/></a>
+    <a href="https://twitter.com/sandeepb633"><img class="one" src="twitter.png" alt="twitter logo"/></a>
 
     <a href="https://www.instagram.com/chintusandeepchintu/"
       ><img class="two" src="instagram.gif" alt="instagram logo"
